@@ -4,17 +4,17 @@
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either 
+ * License as published by the Free Software Foundation; either
  * version 2.1 of the License, or (at your option) any later version.
- * 
+ *
  * This library is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * Lesser General Public License for more details.
- * 
- * You should have received a copy of the GNU Lesser General Public 
+ *
+ * You should have received a copy of the GNU Lesser General Public
  * License along with this library.  If not, see <http://www.gnu.org/licenses/>.
- * 
+ *
  **/
 package lucee.runtime.db;
 
@@ -30,11 +30,14 @@ import java.util.Map.Entry;
 import java.util.Set;
 import java.util.stream.Stream;
 
+import lucee.runtime.util.DBUtilImpl;
+import lucee.runtime.tag.util.QueryParamConverter.NamedSQLItem;
 import lucee.commons.lang.CFTypes;
 import lucee.commons.lang.StringUtil;
 import lucee.commons.math.MathUtil;
 import lucee.runtime.PageContext;
 import lucee.runtime.exp.DatabaseException;
+import lucee.runtime.exp.IllegalQoQException;
 import lucee.runtime.exp.PageException;
 import lucee.runtime.op.Caster;
 import lucee.runtime.op.Decision;
@@ -56,6 +59,7 @@ import lucee.runtime.sql.exp.op.OperationAggregate;
 import lucee.runtime.sql.exp.op.OperationN;
 import lucee.runtime.sql.exp.value.Value;
 import lucee.runtime.sql.exp.value.ValueNumber;
+import lucee.runtime.functions.other.Dump;
 import lucee.runtime.type.Array;
 import lucee.runtime.type.ArrayImpl;
 import lucee.runtime.type.Collection;
@@ -68,14 +72,14 @@ import lucee.runtime.type.QueryImpl;
 import lucee.runtime.type.util.ArrayUtil;
 
 /**
- * 
+ *
  */
 public final class QoQ {
 	final static private Collection.Key paramKey = new KeyImpl("?");
 
 	/**
 	 * Execute a QofQ against a SQL object
-	 * 
+	 *
 	 * @param pc
 	 * @param sql
 	 * @param maxrows
@@ -157,7 +161,7 @@ public final class QoQ {
 
 	/**
 	 * Order the rows in a query
-	 * 
+	 *
 	 * @param target Query to order
 	 * @param columns Column expressions to order on
 	 * @param isUnion Is this a union
@@ -175,12 +179,10 @@ public final class QoQ {
 					if (col instanceof ValueNumber && (ordinalIndex = Caster.toInteger(((Literal) col).getValue(), null)) != null && ordinalIndex > 0
 							&& ordinalIndex <= target.getColumnNames().length) {
 						// Sort the column referenced by the ordinal position
-						target.sort(target.getColumnNames()[ordinalIndex - 1], col.isDirectionBackward() ? Query.ORDER_DESC : Query.ORDER_ASC);
-					}
-					else {
+						target.sort(target.getColumnNames()[ ordinalIndex-1 ], col.isDirectionBackward() ? Query.ORDER_DESC : Query.ORDER_ASC);
+					} else {
 						// All other non-integer literals are invalid.
-						throw new DatabaseException("ORDER BY item [" + col.toString(true) + "] in position " + (i + 1)
-								+ " cannot be a literal value unless it is an integer matching a select column's ordinal position.", null, sql, null);
+						throw new IllegalQoQException("ORDER BY item [" + col.toString(true) + "] in position " + (i+1) + " cannot be a literal value unless it is an integer matching a select column's ordinal position.", null, sql, null);
 					}
 				}
 				else {
@@ -198,7 +200,7 @@ public final class QoQ {
 				target.sort(c.getColumn(), col.isDirectionBackward() ? Query.ORDER_DESC : Query.ORDER_ASC);
 			}
 			else {
-				throw new DatabaseException("ORDER BY items must be a column name/alias from the first select list if the statement contains a UNION operator", null, sql, null);
+				throw new IllegalQoQException("ORDER BY items must be a column name/alias from the first select list if the statement contains a UNION operator", null, sql, null);
 			}
 		}
 	}
@@ -206,7 +208,7 @@ public final class QoQ {
 	/**
 	 * Process a single select statement. If this is a union, append it to the incoming "previous" Query
 	 * and return the new, combined query with all rows
-	 * 
+	 *
 	 * @param pc PageContext
 	 * @param select Select instance
 	 * @param source Source query to pull data from
@@ -295,7 +297,7 @@ public final class QoQ {
 
 	/**
 	 * Combine two queries while retaining all rows.
-	 * 
+	 *
 	 * @param previous Query from previous select to union
 	 * @param target New query to add into the previous
 	 * @return Combined Query with potential duplicate rows
@@ -310,8 +312,8 @@ public final class QoQ {
 		Collection.Key[] previousColKeys = previous.getColumnNames();
 		Collection.Key[] targetColKeys = target.getColumnNames();
 
-		if (previousColKeys.length != targetColKeys.length) {
-			throw new DatabaseException("Cannot perform union as number of columns in selects do not match.", null, sql, null);
+		if( previousColKeys.length != targetColKeys.length ) {
+			throw new IllegalQoQException("Cannot perform union as number of columns in selects do not match.", null, sql, null);
 		}
 
 		// Queries being joined need to have the same number of columns and the data is full
@@ -328,7 +330,7 @@ public final class QoQ {
 
 	/**
 	 * Combine two queries while removing duplicate rows
-	 * 
+	 *
 	 * @param pc PageContext
 	 * @param previous Query from previous select to union
 	 * @param target New query to add into the previous
@@ -340,8 +342,8 @@ public final class QoQ {
 		Collection.Key[] previousColKeys = previous.getColumnNames();
 		Collection.Key[] targetColKeys = target.getColumnNames();
 
-		if (previousColKeys.length != targetColKeys.length) {
-			throw new DatabaseException("Cannot perform union as number of columns in selects do not match.", null, sql, null);
+		if( previousColKeys.length != targetColKeys.length ) {
+			throw new IllegalQoQException("Cannot perform union as number of columns in selects do not match.", null, sql, null);
 		}
 
 		Expression[] selectExpressions = new Expression[previousColKeys.length];
@@ -381,7 +383,7 @@ public final class QoQ {
 
 	/**
 	 * Process a single select that is not partitioned (grouped or distinct)
-	 * 
+	 *
 	 * @param pc PageContext
 	 * @param select Select instance
 	 * @param source Query we're select from
@@ -444,7 +446,7 @@ public final class QoQ {
 
 	/**
 	 * Process a single select that is partitioned (grouped)
-	 * 
+	 *
 	 * @param pc PageContext
 	 * @param select Select instance
 	 * @param source Query we're selecting from
@@ -510,8 +512,8 @@ public final class QoQ {
 		// For a non-grouping query with aggregates where no records matched the where clause
 		// SELECT count(1) FROM qry WHERE 1=0
 		// then we need to add a single empty partition so our final select will have a single row.
-		if (hasAggregateSelect && select.getGroupbys().length == 0 && queryPartitions.getPartitions().size() == 0) {
-			queryPartitions.addEmptyPartition(source, target);
+		if (hasAggregateSelect && select.getGroupbys().length == 0 && queryPartitions.getPartitions().size() == 0 ) {
+			queryPartitions.addEmptyPartition( source, target );
 		}
 
 		// Add first row of each group of partitioned data into final result
@@ -551,7 +553,7 @@ public final class QoQ {
 
 	/**
 	 * Helper for adding a column to a query
-	 * 
+	 *
 	 * @param query
 	 * @param column
 	 * @param type
@@ -565,7 +567,7 @@ public final class QoQ {
 
 	/**
 	 * return value
-	 * 
+	 *
 	 * @param sql
 	 * @param querySource
 	 * @param row
@@ -581,7 +583,7 @@ public final class QoQ {
 
 	/**
 	 * return value
-	 * 
+	 *
 	 * @param sql
 	 * @param querySource
 	 * @param row
@@ -607,7 +609,7 @@ public final class QoQ {
 
 	/**
 	 * Executes a ZEXp
-	 * 
+	 *
 	 * @param sql
 	 * @param source Query Result
 	 * @param exp expression to execute
@@ -633,7 +635,7 @@ public final class QoQ {
 
 	/**
 	 * Accepts an expression which is the input to an aggregate operation.
-	 * 
+	 *
 	 * @param pc
 	 * @param sql
 	 * @param source
@@ -795,10 +797,10 @@ public final class QoQ {
 			// Functions
 			switch (op.charAt(0)) {
 			case 'a':
-				if (op.equals("abs")) return new Double(MathUtil.abs(Caster.toDoubleValue(value)));
-				if (op.equals("acos")) return new Double(Math.acos(Caster.toDoubleValue(value)));
-				if (op.equals("asin")) return new Double(Math.asin(Caster.toDoubleValue(value)));
-				if (op.equals("atan")) return new Double(Math.atan(Caster.toDoubleValue(value)));
+				if (op.equals("abs")) return Double.valueOf(MathUtil.abs(Caster.toDoubleValue(value)));
+				if (op.equals("acos")) return Double.valueOf(Math.acos(Caster.toDoubleValue(value)));
+				if (op.equals("asin")) return Double.valueOf(Math.asin(Caster.toDoubleValue(value)));
+				if (op.equals("atan")) return Double.valueOf(Math.atan(Caster.toDoubleValue(value)));
 				if (op.equals("avg")) {
 					// If there are no non-null values, return empty
 					if (aggregateValues.length == 0) {
@@ -808,25 +810,25 @@ public final class QoQ {
 				}
 				break;
 			case 'c':
-				if (op.equals("ceiling")) return new Double(Math.ceil(Caster.toDoubleValue(value)));
-				if (op.equals("cos")) return new Double(Math.cos(Caster.toDoubleValue(value)));
+				if (op.equals("ceiling")) return Double.valueOf(Math.ceil(Caster.toDoubleValue(value)));
+				if (op.equals("cos")) return Double.valueOf(Math.cos(Caster.toDoubleValue(value)));
 				if (op.equals("count")) return executeCount(pc, sql, source, operators);
 				if (op.equals("cast")) {
 					// Cast is a single operand operator, but it gets the type from the alias of the single operand
 					// i.e. cast( col1 as date )
 					// If there is no alias, throw an exception.
-					if (!operators[0].hasAlias()) {
-						throw new DatabaseException("No type provided to cast to. [" + opn.toString(true) + "] ", null, sql, null);
+					if( !operators[0].hasAlias() ) {
+						throw new IllegalQoQException("No type provided to cast to. [" + opn.toString(true) + "] ", null, sql, null);
 					}
 					return executeCast(pc, value, Caster.toString(operators[0].getAlias()));
 				}
 				if (op.equals("coalesce")) return executeCoalesce(pc, sql, source, operators, row);
 				break;
 			case 'e':
-				if (op.equals("exp")) return new Double(Math.exp(Caster.toDoubleValue(value)));
+				if (op.equals("exp")) return Double.valueOf(Math.exp(Caster.toDoubleValue(value)));
 				break;
 			case 'f':
-				if (op.equals("floor")) return new Double(Math.floor(Caster.toDoubleValue(value)));
+				if (op.equals("floor")) return Double.valueOf(Math.floor(Caster.toDoubleValue(value)));
 				break;
 			case 'u':
 				if (op.equals("upper") || op.equals("ucase")) return Caster.toString(value).toUpperCase();
@@ -835,7 +837,7 @@ public final class QoQ {
 			case 'l':
 				if (op.equals("lower") || op.equals("lcase")) return Caster.toString(value).toLowerCase();
 				if (op.equals("ltrim")) return StringUtil.ltrim(Caster.toString(value), null);
-				if (op.equals("length")) return new Double(Caster.toString(value).length());
+				if (op.equals("length")) return Double.valueOf(Caster.toString(value).length());
 				break;
 			case 'm':
 				if (op.equals("max") || op.equals("min")) {
@@ -885,10 +887,10 @@ public final class QoQ {
 				if (op.equals("rtrim")) return StringUtil.rtrim(Caster.toString(value), null);
 				break;
 			case 's':
-				if (op.equals("sign")) return new Double(MathUtil.sgn(Caster.toDoubleValue(value)));
-				if (op.equals("sin")) return new Double(Math.sin(Caster.toDoubleValue(value)));
+				if (op.equals("sign")) return Double.valueOf(MathUtil.sgn(Caster.toDoubleValue(value)));
+				if (op.equals("sin")) return Double.valueOf(Math.sin(Caster.toDoubleValue(value)));
 				if (op.equals("soundex")) return StringUtil.soundex(Caster.toString(value));
-				if (op.equals("sin")) return new Double(Math.sqrt(Caster.toDoubleValue(value)));
+				if (op.equals("sin")) return Double.valueOf(Math.sqrt(Caster.toDoubleValue(value)));
 				if (op.equals("sum")) {
 					// If there are no non-null values, return empty
 					if (aggregateValues.length == 0) {
@@ -898,7 +900,7 @@ public final class QoQ {
 				}
 				break;
 			case 't':
-				if (op.equals("tan")) return new Double(Math.tan(Caster.toDoubleValue(value)));
+				if (op.equals("tan")) return Double.valueOf(Math.tan(Caster.toDoubleValue(value)));
 				if (op.equals("trim")) return Caster.toString(value).trim();
 				break;
 			}
@@ -916,7 +918,7 @@ public final class QoQ {
 			// Functions
 			switch (op.charAt(0)) {
 			case 'a':
-				if (op.equals("atan2")) return new Double(Math.atan2(Caster.toDoubleValue(left), Caster.toDoubleValue(right)));
+				if (op.equals("atan2")) return Double.valueOf(Math.atan2(Caster.toDoubleValue(left), Caster.toDoubleValue(right)));
 				break;
 			case 'b':
 				if (op.equals("bitand")) return OpUtil.bitand(pc, Caster.toDoubleValue(left), Caster.toDoubleValue(right));
@@ -933,10 +935,10 @@ public final class QoQ {
 					// column name ("string" in this case).
 					// convert() is the binary version of the unary operator cast()
 					// i.e. convert( col1, string ) is the same as cast( col1 as string )
-					if (operators[1] instanceof ColumnExpression) {
-						right = ((ColumnExpression) operators[1]).getColumnName();
+					if( operators[1] instanceof ColumnExpression ) {
+						right = ((ColumnExpression)operators[1]).getColumnName();
 					}
-					return executeCast(pc, left, Caster.toString(right));
+					return executeCast( pc, left, Caster.toString( right ) );
 				}
 				break;
 			case 'i':
@@ -948,8 +950,7 @@ public final class QoQ {
 					if (left == null || right == null) {
 						return null;
 					}
-
-					return new Double(castForMathDouble(left) % castForMathDouble(right));
+					return Double.valueOf(castForMathDouble(left) % castForMathDouble(right));
 				}
 				break;
 			case 'p':
@@ -988,9 +989,16 @@ public final class QoQ {
 		else if (inputList.size() > 1 && first instanceof Value && ((Value) first).getString().equals("distinct")) {
 			isDistinct = true;
 			inputList.remove(0);
+			// This would be count( DISTINCT col1, col2 )
+			// HSQLDB doesn't support this either
+			if (inputList.size() > 1) {
+				throw new IllegalQoQException("count( DISTINCT ... ) doesn't support more than one expression at this time", null, sql, null);
+			}
+
 		}
 		if (inputList.size() > 1) {
-			throw new DatabaseException("count() aggregate doesn't support more than one expression at this time", null, sql, null);
+			// HSQLDB doesn't support this either
+			throw new IllegalQoQException("count() only accepts one expression, but you provided " + inputList.size() + ".", null, sql, null);
 		}
 		Expression input = inputList.get(0);
 		// count(*), count(1), or count('asdf') just count the rows
@@ -1003,7 +1011,7 @@ public final class QoQ {
 		}
 		else {
 			// I'm not sure if this would ever get hit.
-			throw new DatabaseException("count() function can only accept [*], a literal value, a column name, or an expression.", null, sql, null);
+			throw new IllegalQoQException("count() function can only accept [*], a literal value, a column name, or an expression.", null, sql, null);
 		}
 	}
 
@@ -1018,31 +1026,34 @@ public final class QoQ {
 		return null;
 	}
 
-	private Object executeCast(PageContext pc, Object value, String type) throws PageException {
+
+
+	private Object executeCast( PageContext pc, Object value, String type ) throws PageException {
 		return Caster.castTo(pc, CFTypes.toShort(type, true, CFTypes.TYPE_UNKNOW), type, value);
 	}
 
+
 	/*
 	 * *
-	 * 
+	 *
 	 * @param expression / private void print(ZExpression expression) {
 	 * print.ln("Operator:"+expression.getOperator().toLowerCase()); int len=expression.nbOperands();
 	 * for(int i=0;i<len;i++) { print.ln("	["+i+"]=	" +expression.getOperand(i)); } }/*
-	 * 
-	 * 
-	 * 
+	 *
+	 *
+	 *
 	 * /**
-	 * 
+	 *
 	 * execute an and operation
-	 * 
+	 *
 	 * @param source QueryResult to execute on it
-	 * 
+	 *
 	 * @param expression
-	 * 
+	 *
 	 * @param row row of resultset to execute
-	 * 
+	 *
 	 * @return
-	 * 
+	 *
 	 * @throws PageException
 	 */
 	private Object executeAnd(PageContext pc, SQL sql, Query source, Operation2 expression, int row) throws PageException {
@@ -1058,9 +1069,9 @@ public final class QoQ {
 	}
 
 	/**
-	 * 
+	 *
 	 * execute an and operation
-	 * 
+	 *
 	 * @param sql
 	 * @param source QueryResult to execute on it
 	 * @param expression
@@ -1088,9 +1099,9 @@ public final class QoQ {
 	}
 
 	/**
-	 * 
+	 *
 	 * execute an equal operation
-	 * 
+	 *
 	 * @param sql
 	 * @param source QueryResult to execute on it
 	 * @param expression
@@ -1103,9 +1114,9 @@ public final class QoQ {
 	}
 
 	/**
-	 * 
+	 *
 	 * execute a not equal operation
-	 * 
+	 *
 	 * @param sql
 	 * @param source QueryResult to execute on it
 	 * @param expression
@@ -1118,9 +1129,9 @@ public final class QoQ {
 	}
 
 	/**
-	 * 
+	 *
 	 * execute a less than operation
-	 * 
+	 *
 	 * @param sql
 	 * @param source QueryResult to execute on it
 	 * @param expression
@@ -1133,9 +1144,9 @@ public final class QoQ {
 	}
 
 	/**
-	 * 
+	 *
 	 * execute a less than or equal operation
-	 * 
+	 *
 	 * @param sql
 	 * @param source QueryResult to execute on it
 	 * @param expression
@@ -1148,9 +1159,9 @@ public final class QoQ {
 	}
 
 	/**
-	 * 
+	 *
 	 * execute a greater than operation
-	 * 
+	 *
 	 * @param sql
 	 * @param source QueryResult to execute on it
 	 * @param expression
@@ -1163,9 +1174,9 @@ public final class QoQ {
 	}
 
 	/**
-	 * 
+	 *
 	 * execute a greater than or equal operation
-	 * 
+	 *
 	 * @param sql
 	 * @param source QueryResult to execute on it
 	 * @param expression
@@ -1178,9 +1189,9 @@ public final class QoQ {
 	}
 
 	/**
-	 * 
+	 *
 	 * execute an equal operation
-	 * 
+	 *
 	 * @param sql
 	 * @param source QueryResult to execute on it
 	 * @param op
@@ -1203,17 +1214,17 @@ public final class QoQ {
 		}
 
 		Double rightDouble = castForMathDouble(right);
-		if (rightDouble == 0) {
-			throw new DatabaseException("Divide by zero not allowed.  Encountered while evaluating [" + expression.toString(true) + "] in row " + row, null, sql, null);
+		if( rightDouble == 0 ) {
+			throw new IllegalQoQException("Divide by zero not allowed.  Encountered while evaluating ["  + expression.toString( true ) + "] in row " + row, null, sql, null);
 		}
 
-		return new Double(castForMathDouble(left) % rightDouble);
+		return Double.valueOf(castForMathDouble(left) % rightDouble);
 	}
 
 	/**
-	 * 
+	 *
 	 * execute a greater than or equal operation
-	 * 
+	 *
 	 * @param sql
 	 * @param source QueryResult to execute on it
 	 * @param expression
@@ -1233,7 +1244,7 @@ public final class QoQ {
 
 	/**
 	 * Cast value to Double, accounting for logic such as turning empty strings into zero.
-	 * 
+	 *
 	 * @param value Value for casting. Must be non-null
 	 * @return Value cast to a Double
 	 */
@@ -1246,7 +1257,7 @@ public final class QoQ {
 
 	/**
 	 * Cast value to Int, accounting for logic such as turning empty strings into zero.
-	 * 
+	 *
 	 * @param value Value for casting. Must be non-null
 	 * @return Value cast to a Int
 	 */
@@ -1258,9 +1269,9 @@ public final class QoQ {
 	}
 
 	/**
-	 * 
+	 *
 	 * execute a minus operation
-	 * 
+	 *
 	 * @param sql
 	 * @param source QueryResult to execute on it
 	 * @param expression
@@ -1277,13 +1288,13 @@ public final class QoQ {
 			return null;
 		}
 
-		return new Double(castForMathDouble(left) - castForMathDouble(right));
+		return Double.valueOf(castForMathDouble(left) - castForMathDouble(right));
 	}
 
 	/**
-	 * 
+	 *
 	 * execute a divide operation
-	 * 
+	 *
 	 * @param sql
 	 * @param source QueryResult to execute on it
 	 * @param expression
@@ -1301,17 +1312,17 @@ public final class QoQ {
 		}
 
 		Double rightDouble = castForMathDouble(right);
-		if (rightDouble == 0) {
-			throw new DatabaseException("Divide by zero not allowed.  Encountered while evaluating [" + expression.toString(true) + "] in row " + row, null, sql, null);
+		if( rightDouble == 0 ) {
+			throw new IllegalQoQException("Divide by zero not allowed.  Encountered while evaluating ["  + expression.toString( true ) + "] in row " + row, null, sql, null);
 		}
 
-		return new Double(castForMathDouble(left) / rightDouble);
+		return Double.valueOf(castForMathDouble(left) / rightDouble);
 	}
 
 	/**
-	 * 
+	 *
 	 * execute a multiply operation
-	 * 
+	 *
 	 * @param sql
 	 * @param source QueryResult to execute on it
 	 * @param expression
@@ -1328,13 +1339,13 @@ public final class QoQ {
 			return null;
 		}
 
-		return new Double(castForMathDouble(left) * castForMathDouble(right));
+		return Double.valueOf(castForMathDouble(left) * castForMathDouble(right));
 	}
 
 	/**
-	 * 
+	 *
 	 * execute a bitwise operation
-	 * 
+	 *
 	 * @param sql
 	 * @param source QueryResult to execute on it
 	 * @param expression
@@ -1355,9 +1366,9 @@ public final class QoQ {
 	}
 
 	/**
-	 * 
+	 *
 	 * execute a plus operation
-	 * 
+	 *
 	 * @param sql
 	 * @param source QueryResult to execute on it
 	 * @param expression
@@ -1378,7 +1389,7 @@ public final class QoQ {
 				return null;
 			}
 
-			return new Double(dLeft + dRight);
+			return Double.valueOf(dLeft + dRight);
 			// If casting fails, we assume the inputs are strings and concat instead
 			// Unlike SQL, we're not going to return null for a null string concat
 		}
@@ -1388,9 +1399,9 @@ public final class QoQ {
 	}
 
 	/**
-	 * 
+	 *
 	 * execute a between operation
-	 * 
+	 *
 	 * @param sql
 	 * @param source QueryResult to execute on it
 	 * @param expression
@@ -1421,7 +1432,7 @@ public final class QoQ {
 
 	/**
 	 * Executes a constant value
-	 * 
+	 *
 	 * @param sql
 	 * @param source
 	 * @param column
@@ -1430,23 +1441,26 @@ public final class QoQ {
 	 * @throws PageException
 	 */
 	private Object executeColumn(PageContext pc, SQL sql, Query source, Column column, int row) throws PageException {
-		if (column.isParam()) {
-			int pos = column.getColumnIndex();
-			if (sql.getItems().length <= pos) throw new DatabaseException("invalid syntax for SQL Statement", null, sql, null);
-			// If null=true is used with query param
-			if (sql.getItems()[pos].isNulls()) return null;
-			return sql.getItems()[pos].getValueForCF();
-		}
-		return column.getValue(pc, source, row, null);
+		return executeColumn( pc, sql, source, column, row, null);
 	}
 
 	private Object executeColumn(PageContext pc, SQL sql, Query source, Column column, int row, Object defaultValue) throws PageException {
 		if (column.isParam()) {
 			int pos = column.getColumnIndex();
-			if (sql.getItems().length <= pos) throw new DatabaseException("invalid syntax for SQL Statement", null, sql, null);
+			if (sql.getItems().length <= pos) throw new IllegalQoQException("Invalid SQL Statement. Not enough parameters provided.", null, sql, null);
+			SQLItem param = sql.getItems()[pos];
 			// If null=true is used with query param
-			if (sql.getItems()[pos].isNulls()) return null;
-			return sql.getItems()[pos].getValueForCF();
+			if (param.isNulls()) return null;
+			try{
+				return param.getValueForCF();
+			} catch( PageException e ){
+				// Create best error message based on whether param was defined as ? or :name
+				if( param instanceof NamedSQLItem ) {
+					throw (IllegalQoQException)(new IllegalQoQException( "Parameter [:" + ((NamedSQLItem)param).getName() + "] is invalid.", e.getMessage(), sql, null).initCause( e ));
+				} else {
+					throw (IllegalQoQException)(new IllegalQoQException( new DBUtilImpl().toStringType( param.getType() ) + " parameter in position " + (pos+1) + " is invalid.", e.getMessage(), sql, null).initCause( e ));
+				}
+			}
 		}
 		return column.getValue(pc, source, row, defaultValue);
 	}
