@@ -32,8 +32,8 @@ import lucee.runtime.op.Caster;
  */
 public final class LNumber implements Literal {
 
-	public static final LNumber ZERO = new LNumber(new Double(0));
-	public static final LNumber ONE = new LNumber(new Double(1));
+	public static final LNumber ZERO = new LNumber(Double.valueOf(0));
+	public static final LNumber ONE = new LNumber(Double.valueOf(1));
 
 	private Object literal;
 
